@@ -15,6 +15,8 @@
 	* D2X.make, arch/carbon/conf.h: compile as a classic powerpc app
 	in MPW
 
+	* misc/strutil.c: fix MPW compiler errors
+
 2004-12-07  Chris Taylor  <c.taylor@student.curtin.edu.au>
 
 	* 2d/font.c: Initialise the dataptr member correctly.
